force-app/main/default/objects/aecm__Quick_Links__mdt/aecm__Quick_Links__mdt.object-meta.xml
<CustomObject>
    <label>Quick Links</label>
</CustomObject>