force-app/main/default/objects/aecm__Quick_Links__mdt/fields/aecm__Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Developer_Name__c</fullName>
    <inlineHelpText>for list view : [objectAPIName:filterName],
for Lighnting page : [apiName]</inlineHelpText>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>