force-app/main/default/objects/aecm__Quick_Links__mdt/fields/aecm__Render_Order__c.field-meta.xml
<CustomField>
    <fullName>aecm__Render_Order__c</fullName>
    <label>Render Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>