force-app/main/default/objects/aecm__Quick_Links__mdt/fields/aecm__SLDS_Icon__c.field-meta.xml
<CustomField>
    <fullName>aecm__SLDS_Icon__c</fullName>
    <description>The name of the SLDS icon to use</description>
    <label>SLDS Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>