force-app/main/default/objects/aecm__Quick_Links__mdt/fields/aecm__Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List View</fullName>
                <default>true</default>
                <label>List View</label>
            </value>
            <value>
                <fullName>Lighnting page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>